--- a/sosym-evaluations/metamodel/cloudml/org.kevoree.modeling.sample.cloudml.emf/pom.xml
+++ b/sosym-evaluations/metamodel/cloudml/org.kevoree.modeling.sample.cloudml.emf/pom.xml
@@ -3,79 +3,47 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.kevoree.modeling</groupId>
-    <artifactId>org.kevoree.modeling.sample.thingml.kt</artifactId>
+    <artifactId>org.kevoree.modeling.sample.cloudml.emf</artifactId>
     <packaging>jar</packaging>
-    <name>Kevoree :: Modeling :: Sample :: Thingml :: Kotlin</name>
+    <name>Kevoree :: Modeling :: Sample :: CloudML :: EMF</name>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
-        <metamodel.ecore>metamodel/thingml.ecore</metamodel.ecore>
-        <kotlin.version>0.5.748</kotlin.version>
+        <metamodel.ecore>metamodel/CloudML.ecore</metamodel.ecore>
+        <emf.version>2.7.0</emf.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib</artifactId>
-            <version>${kotlin.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.intellij</groupId>
-            <artifactId>annotations</artifactId>
-            <version>117.157</version>
-        </dependency>
+            <groupId>org.kevoree.extra</groupId>
+            <artifactId>org.kevoree.extra.emf.library</artifactId>
+            <version>${emf.version}</version>
+        </dependency> 		
     </dependencies>
 
     <build>
-
-        <sourceDirectory>${basedir}/target/generated-sources/kmf</sourceDirectory>
-
         <plugins>
-
+			
             <plugin>
-                <groupId>org.kevoree.modeling</groupId>
-                <artifactId>org.kevoree.modeling.kotlin.generator.mavenplugin</artifactId>
-                <version>1.3.0-BETA4-SNAPSHOT</version>
-                <extensions>true</extensions>
+                <groupId>org.kevoree.extra</groupId>
+                <artifactId>org.kevoree.extra.emf.genmodel.mavenplugin</artifactId>
+                <version>2.7.1</version>
                 <executions>
                     <execution>
-                        <id>ModelGen</id>
+                        <id>generate-sources</id>
+                        <phase>generate-sources</phase>
                         <goals>
                             <goal>generate</goal>
                         </goals>
-                        <configuration>
-                            <ecore>${metamodel.ecore}</ecore>
-                            <packagePrefix>kmf</packagePrefix>
-                            <clearOutput>false</clearOutput>
-                        </configuration>
                     </execution>
                 </executions>
+                <configuration>
+                    <ecore>${basedir}/${metamodel.ecore}</ecore>
+                    <output>${basedir}/target/generated-sources/emf</output>
+                    <basePackage>emf</basePackage>
+                </configuration>
             </plugin>
-
-
-            <plugin>
-                <groupId>org.jetbrains.kotlin</groupId>
-                <artifactId>kotlin-maven-plugin</artifactId>
-                <version>${kotlin.version}</version>
-                <!--
-                <dependencies>
-                    <dependency>
-                        <groupId>org.jetbrains.kotlin</groupId>
-                        <artifactId>kotlin-js-library</artifactId>
-                        <version>${kotlin.version}</version>
-                    </dependency>
-                </dependencies>
-                -->
-                <executions>
-                    <execution>
-                        <id>compile</id>
-                        <phase>process-sources</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+			
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -87,9 +55,6 @@
             </plugin>
 
         </plugins>
-
-
-
     </build>
 
     <repositories>
