--- a/sosym-evaluations/metamodel/cloudml/org.kevoree.modeling.sample.cloudml.kt/pom.xml
+++ b/sosym-evaluations/metamodel/cloudml/org.kevoree.modeling.sample.cloudml.kt/pom.xml
@@ -3,13 +3,13 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.kevoree.modeling</groupId>
-    <artifactId>org.kevoree.modeling.sample.thingml.kt</artifactId>
+    <artifactId>org.kevoree.modeling.sample.cloudml.kt</artifactId>
     <packaging>jar</packaging>
-    <name>Kevoree :: Modeling :: Sample :: Thingml :: Kotlin</name>
+    <name>Kevoree :: Modeling :: Sample :: CloudML :: Kotlin</name>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
-        <metamodel.ecore>metamodel/thingml.ecore</metamodel.ecore>
+        <metamodel.ecore>metamodel/CloudML.ecore</metamodel.ecore>
         <kotlin.version>0.5.748</kotlin.version>
     </properties>
 
