--- a/sosym-evaluations/metamodel/diva/org.kevoree.modeling.sample.diva.kt/pom.xml
+++ b/sosym-evaluations/metamodel/diva/org.kevoree.modeling.sample.diva.kt/pom.xml
@@ -10,8 +10,14 @@
 
     <properties>
         <metamodel.ecore>metamodel/diva.ecore</metamodel.ecore>
-        <kotlin.version>0.5.748</kotlin.version>
     </properties>
+
+    <parent>
+        <groupId>org.kevoree.modeling</groupId>
+        <artifactId>org.kevoree.modeling.sample.root</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
+    </parent>
 
     <dependencies>
         <dependency>
@@ -27,15 +33,11 @@
     </dependencies>
 
     <build>
-
-        <sourceDirectory>${basedir}/target/generated-sources/kmf</sourceDirectory>
-
         <plugins>
-
             <plugin>
                 <groupId>org.kevoree.modeling</groupId>
                 <artifactId>org.kevoree.modeling.kotlin.generator.mavenplugin</artifactId>
-                <version>1.3.0-BETA4-SNAPSHOT</version>
+                <version>${kmf.version}</version>
                 <extensions>true</extensions>
                 <executions>
                     <execution>
@@ -51,21 +53,10 @@
                     </execution>
                 </executions>
             </plugin>
-
-
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${kotlin.version}</version>
-                <!--
-                <dependencies>
-                    <dependency>
-                        <groupId>org.jetbrains.kotlin</groupId>
-                        <artifactId>kotlin-js-library</artifactId>
-                        <version>${kotlin.version}</version>
-                    </dependency>
-                </dependencies>
-                -->
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -76,62 +67,7 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.3</version>
-                <configuration>
-                    <argLine>-Xmx1024m</argLine>
-                </configuration>
-            </plugin>
-
         </plugins>
-
-
-
     </build>
-
-    <repositories>
-        <repository>
-            <id>kevoree-libs-release-local</id>
-            <url>http://maven.kevoree.org/release</url>
-        </repository>
-        <repository>
-            <id>kevoree-snapshots</id>
-            <url>http://maven.kevoree.org/snapshots</url>
-        </repository>
-        <repository>
-            <id>jetbrains-release</id>
-            <url>http://repository.jetbrains.com/all</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>plugin.kevoree-github</id>
-            <url>http://maven.kevoree.org/release</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>plugin.kevoree-snapshots</id>
-            <url>http://maven.kevoree.org/snapshots</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>jetbrains-release</id>
-            <url>http://repository.jetbrains.com/all</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
 
 </project>
