--- a/sosym-evaluations/metamodel/fsm/org.kevoree.modeling.sample.fsm.emf/pom.xml
+++ b/sosym-evaluations/metamodel/fsm/org.kevoree.modeling.sample.fsm.emf/pom.xml
@@ -10,8 +10,14 @@
 
     <properties>
         <metamodel.ecore>metamodel/fsm.ecore</metamodel.ecore>
-        <emf.version>2.7.0</emf.version>
     </properties>
+
+    <parent>
+        <groupId>org.kevoree.modeling</groupId>
+        <artifactId>org.kevoree.modeling.sample.root</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
+    </parent>
 
     <dependencies>
         <dependency>
@@ -43,60 +49,9 @@
                     <basePackage>org.emf</basePackage>
                 </configuration>
             </plugin>
-			
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.3</version>
-                <configuration>
-                    <argLine>-Xmx1024m</argLine>
-                </configuration>
-            </plugin>
 
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
-            <id>kevoree-libs-release-local</id>
-            <url>http://maven.kevoree.org/release</url>
-        </repository>
-        <repository>
-            <id>kevoree-snapshots</id>
-            <url>http://maven.kevoree.org/snapshots</url>
-        </repository>
-        <repository>
-            <id>jetbrains-release</id>
-            <url>http://repository.jetbrains.com/all</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>plugin.kevoree-github</id>
-            <url>http://maven.kevoree.org/release</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>plugin.kevoree-snapshots</id>
-            <url>http://maven.kevoree.org/snapshots</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>jetbrains-release</id>
-            <url>http://repository.jetbrains.com/all</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
 
 </project>
