--- a/sosym-evaluations/metamodel/pom.xml
+++ b/sosym-evaluations/metamodel/pom.xml
@@ -8,41 +8,69 @@
     <name>Kevoree :: Modeling :: Sample :: Root</name>
     <version>1.0.0-SNAPSHOT</version>
 
+    <properties>
+    	<kotlin.version>0.5.748</kotlin.version>
+		<kmf.version>1.3.0-BETA4-SNAPSHOT</kmf.version>
+        <emf.version>2.7.0</emf.version>
+    </properties>
+
 	<modules>
 		<module>fsm/org.kevoree.modeling.sample.fsm.kt</module>
 		<module>fsm/org.kevoree.modeling.sample.fsm.emf</module>
-		
 		<module>kevoree/org.kevoree.modeling.sample.kevoree.kt</module>
 		<module>kevoree/org.kevoree.modeling.sample.kevoree.emf</module>
-		
 		<module>kermeta/org.kevoree.modeling.sample.kermeta.kt</module>
 		<module>kermeta/org.kevoree.modeling.sample.kermeta.emf</module>
 		<module>kermeta/org.kevoree.modeling.sample.kermeta.js</module>
-		
 		<module>thingml/org.kevoree.modeling.sample.thingml.kt</module>
 		<module>thingml/org.kevoree.modeling.sample.thingml.emf</module>
-		
-		<module>cloudml/org.kevoree.modeling.sample.cloudml.kt</module>
-		<module>cloudml/org.kevoree.modeling.sample.cloudml.emf</module>
-		
 		<module>diva/org.kevoree.modeling.sample.diva.kt</module>
 		<module>diva/org.kevoree.modeling.sample.diva.emf</module>
-		
-		
+        <module>cloudml/org.kevoree.modeling.sample.cloudml.kt</module>
+        <module>cloudml/org.kevoree.modeling.sample.cloudml.emf</module>
 	</modules>
 
     <repositories>
-        <repository>
-            <id>jetbrains-all</id>
-            <url>http://repository.jetbrains.com/all</url>
-        </repository>
-    </repositories>
+          <repository>
+              <id>kevoree-libs-release-local</id>
+              <url>http://maven.kevoree.org/release</url>
+          </repository>
+          <repository>
+              <id>kevoree-snapshots</id>
+              <url>http://maven.kevoree.org/snapshots</url>
+          </repository>
+          <repository>
+              <id>jetbrains-release</id>
+              <url>http://repository.jetbrains.com/all</url>
+          </repository>
+      </repositories>
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>jetbrains-all</id>
-            <url>http://repository.jetbrains.com/all</url>
-        </pluginRepository>
-    </pluginRepositories>
+      <pluginRepositories>
+          <pluginRepository>
+              <id>plugin.kevoree-github</id>
+              <url>http://maven.kevoree.org/release</url>
+          </pluginRepository>
+          <pluginRepository>
+              <id>plugin.kevoree-snapshots</id>
+              <url>http://maven.kevoree.org/snapshots</url>
+          </pluginRepository>
+          <pluginRepository>
+              <id>jetbrains-release</id>
+              <url>http://repository.jetbrains.com/all</url>
+          </pluginRepository>
+      </pluginRepositories>
+
+	<build>
+		<plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12.3</version>
+                <configuration>
+                    <argLine>-Xmx1024m</argLine>
+                </configuration>
+            </plugin>
+		</plugins>
+	</build>
 
 </project>
