--- a/metamodel/fsm/org.kevoree.modeling.sample.fsm.kt/pom.xml
+++ b/metamodel/fsm/org.kevoree.modeling.sample.fsm.kt/pom.xml
@@ -3,13 +3,13 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.kevoree.modeling</groupId>
-    <artifactId>org.kevoree.modeling.sample.kermeta.js</artifactId>
+    <artifactId>org.kevoree.modeling.sample.fsm.kt</artifactId>
     <packaging>jar</packaging>
-    <name>Kevoree :: Modeling :: Sample :: Kermeta :: JS</name>
+    <name>Kevoree :: Modeling :: Sample :: Finite State Machine :: Kotlin</name>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
-        <metamodel.ecore>metamodel/kermeta.ecore</metamodel.ecore>
+        <metamodel.ecore>metamodel/fsm.ecore</metamodel.ecore>
     </properties>
 
     <parent>
@@ -47,10 +47,8 @@
                         </goals>
                         <configuration>
                             <ecore>${metamodel.ecore}</ecore>
-                            <packagePrefix>kmf</packagePrefix>
+                            <packagePrefix>org</packagePrefix>
                             <clearOutput>false</clearOutput>
-                            <js>true</js>
-                            <json>true</json>
                         </configuration>
                     </execution>
                 </executions>
@@ -61,21 +59,17 @@
                 <version>${kotlin.version}</version>
                 <executions>
                     <execution>
-                        <id>js</id>
+                        <id>compile</id>
+                        <phase>process-sources</phase>
                         <goals>
-                            <goal>js</goal>
+                            <goal>compile</goal>
                         </goals>
                     </execution>
                 </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.jetbrains.kotlin</groupId>
-                        <artifactId>kotlin-js-library</artifactId>
-                        <version>${kotlin.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
+
+
 
 </project>
