--- a/metamodel/thingml/org.kevoree.modeling.sample.thingml.kt/pom.xml
+++ b/metamodel/thingml/org.kevoree.modeling.sample.thingml.kt/pom.xml
@@ -3,13 +3,13 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.kevoree.modeling</groupId>
-    <artifactId>org.kevoree.modeling.sample.kermeta.js</artifactId>
+    <artifactId>org.kevoree.modeling.sample.thingml.kt</artifactId>
     <packaging>jar</packaging>
-    <name>Kevoree :: Modeling :: Sample :: Kermeta :: JS</name>
+    <name>Kevoree :: Modeling :: Sample :: Thingml :: Kotlin</name>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
-        <metamodel.ecore>metamodel/kermeta.ecore</metamodel.ecore>
+        <metamodel.ecore>metamodel/thingml.ecore</metamodel.ecore>
     </properties>
 
     <parent>
@@ -33,6 +33,7 @@
     </dependencies>
 
     <build>
+
         <plugins>
             <plugin>
                 <groupId>org.kevoree.modeling</groupId>
@@ -49,8 +50,6 @@
                             <ecore>${metamodel.ecore}</ecore>
                             <packagePrefix>kmf</packagePrefix>
                             <clearOutput>false</clearOutput>
-                            <js>true</js>
-                            <json>true</json>
                         </configuration>
                     </execution>
                 </executions>
@@ -61,19 +60,13 @@
                 <version>${kotlin.version}</version>
                 <executions>
                     <execution>
-                        <id>js</id>
+                        <id>compile</id>
+                        <phase>process-sources</phase>
                         <goals>
-                            <goal>js</goal>
+                            <goal>compile</goal>
                         </goals>
                     </execution>
                 </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.jetbrains.kotlin</groupId>
-                        <artifactId>kotlin-js-library</artifactId>
-                        <version>${kotlin.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
