--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
+                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                 </configuration>
             </plugin>
 			<!--
