--- a/metamodel/pom.xml
+++ b/metamodel/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
     	<kotlin.version>0.5.748</kotlin.version>
-		<kmf.version>1.3.0-BETA6-SNAPSHOT</kmf.version>
+		<kmf.version>1.3.1-SNAPSHOT</kmf.version>
         <emf.version>2.7.0</emf.version>
     </properties>
 
