--- a/sosym-evaluations/org.kevoree.modeling.sosym.eval.fsm/pom.xml
+++ b/sosym-evaluations/org.kevoree.modeling.sosym.eval.fsm/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>org.kevoree.modeling.sample.fsm.kt</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
