--- a/metamodel/fsm/org.kevoree.modeling.sample.fsm.kt.events/pom.xml
+++ b/metamodel/fsm/org.kevoree.modeling.sample.fsm.kt.events/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
-        <metamodel.ecore>metamodel/fsm.ecore</metamodel.ecore>
+        <metamodel.ecore>metamodel/fsm_with_ids.ecore</metamodel.ecore>
     </properties>
 
     <parent>
@@ -29,6 +29,12 @@
             <groupId>org.jetbrains.intellij</groupId>
             <artifactId>annotations</artifactId>
             <version>117.157</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
