Adding project with events for tests

--- a/metamodel/pom.xml
+++ b/metamodel/pom.xml
@@ -17,6 +17,7 @@
 	<modules>
 		<module>fsm/org.kevoree.modeling.sample.fsm.kt</module>
 		<module>fsm/org.kevoree.modeling.sample.fsm.emf</module>
+		<module>fsm/org.kevoree.modeling.sample.fsm.kt.events</module>
 		<module>kevoree/org.kevoree.modeling.sample.kevoree.kt</module>
 		<module>kevoree/org.kevoree.modeling.sample.kevoree.js</module>
 		<module>kevoree/org.kevoree.modeling.sample.kevoree.emf</module>
