fix js generation

--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/pom.xml
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/pom.xml
@@ -47,7 +47,7 @@
                         </goals>
                         <configuration>
                             <ecore>${metamodel.ecore}</ecore>
-                            <packagePrefix>kmf</packagePrefix>
+                            <packagePrefix>org</packagePrefix>
                             <clearOutput>false</clearOutput>
                             <js>true</js>
                             <json>true</json>
