add event to kevoree.kt test

--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.kt/pom.xml
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.kt/pom.xml
@@ -55,6 +55,7 @@
                             <packagePrefix>kmf</packagePrefix>
                             <clearOutput>false</clearOutput>
 							<json>true</json>
+							<events>true</events>
                         </configuration>
                     </execution>
                 </executions>
