--- a/metamodel/pom.xml
+++ b/metamodel/pom.xml
@@ -18,9 +18,13 @@
 		<module>fsm/org.kevoree.modeling.sample.fsm.kt</module>
 		<module>fsm/org.kevoree.modeling.sample.fsm.emf</module>
 		<module>fsm/org.kevoree.modeling.sample.fsm.kt.events</module>
+		
 		<module>kevoree/org.kevoree.modeling.sample.kevoree.kt</module>
 		<module>kevoree/org.kevoree.modeling.sample.kevoree.js</module>
 		<module>kevoree/org.kevoree.modeling.sample.kevoree.emf</module>
+		<module>kevoree/org.kevoree.modeling.sample.kevoree.event.js</module>
+		
+		
 		<module>kermeta/org.kevoree.modeling.sample.kermeta.kt</module>
 		<module>kermeta/org.kevoree.modeling.sample.kermeta.emf</module>
 		<module>kermeta/org.kevoree.modeling.sample.kermeta.js</module>
