--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <emf.version>2.7.0</emf.version>
         <scala.version>2.9.3</scala.version>
         <releaseUrl>http://maven.kevoree.org/release</releaseUrl>
+        <kotlin.version>0.5.998</kotlin.version>
         <kevoree.modeling.version>${project.version}</kevoree.modeling.version>
     </properties>
 
@@ -76,6 +77,13 @@
             <version>4.9</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-compiler</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
