--- a/metamodel/kermeta/org.kevoree.modeling.sample.kermeta.js/pom.xml
+++ b/metamodel/kermeta/org.kevoree.modeling.sample.kermeta.js/pom.xml
@@ -49,6 +49,13 @@
                         </configuration>
                     </execution>
                 </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.jetbrains.kotlin</groupId>
+                        <artifactId>kotlin-js-library</artifactId>
+                        <version>${kotlin.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
