--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.kt/pom.xml
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.kt/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
         </dependency>
+        <!-- selector dependency -->
+        <dependency>
+            <groupId>fr.inria.jfilter</groupId>
+            <artifactId>jfilter-library</artifactId>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -47,10 +53,11 @@
                         </goals>
                         <configuration>
                             <ecore>${metamodel.ecore}</ecore>
-                            <packagePrefix>kmf</packagePrefix>
+                            <packagePrefix>org.kevoree</packagePrefix>
                             <clearOutput>false</clearOutput>
 							<json>true</json>
 							<events>true</events>
+                            <selector>true</selector>
                         </configuration>
                     </execution>
                 </executions>
