--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.kt/pom.xml
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.kt/pom.xml
@@ -53,7 +53,7 @@
                         </goals>
                         <configuration>
                             <ecore>${metamodel.ecore}</ecore>
-                            <packagePrefix>org.kevoree</packagePrefix>
+                            <packagePrefix>org</packagePrefix>
                             <clearOutput>false</clearOutput>
 							<json>true</json>
 							<events>true</events>
