--- a/metamodel/pom.xml
+++ b/metamodel/pom.xml
@@ -20,6 +20,8 @@
 		<module>fsm/org.kevoree.modeling.sample.fsm.kt.events</module>
 		
 		<module>kevoree/org.kevoree.modeling.sample.kevoree.kt</module>
+		<module>kevoree/org.kevoree.modeling.sample.kevoree.test</module>
+		
 		<module>kevoree/org.kevoree.modeling.sample.kevoree.js</module>
 		<module>kevoree/org.kevoree.modeling.sample.kevoree.emf</module>
 		<module>kevoree/org.kevoree.modeling.sample.kevoree.event.js</module>
