cleanup trace generator from elem

--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.kt/pom.xml
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.kt/pom.xml
@@ -58,6 +58,7 @@
 							<json>true</json>
 							<events>true</events>
                             <selector>true</selector>
+                            <trace>true</trace>
                         </configuration>
                     </execution>
                 </executions>
