--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.test/pom.xml
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.test/pom.xml
@@ -36,6 +36,7 @@
                         <phase>process-sources</phase>
                         <goals>
                             <goal>compile</goal>
+                            <goal>test-compile</goal>
                         </goals>
                     </execution>
                 </executions>
