--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.event.js/pom.xml
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.event.js/pom.xml
@@ -25,6 +25,18 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.htmlunit</groupId>
+            <artifactId>htmlunit</artifactId>
+            <version>2.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -46,7 +58,7 @@
                             <clearOutput>false</clearOutput>
                             <js>true</js>
                             <json>true</json>
-							<events>true</events>
+                            <events>true</events>
                         </configuration>
                     </execution>
                 </executions>
