--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.event.js/pom.xml
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.event.js/pom.xml
@@ -59,6 +59,7 @@
                             <js>true</js>
                             <json>true</json>
                             <events>true</events>
+                            <trace>true</trace>
                         </configuration>
                     </execution>
                 </executions>
