Adding load model test

--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.emf/pom.xml
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.emf/pom.xml
@@ -24,7 +24,13 @@
             <groupId>org.kevoree.extra</groupId>
             <artifactId>org.kevoree.extra.emf.library</artifactId>
             <version>${emf.version}</version>
-        </dependency> 		
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
