--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.test/pom.xml
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.test/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>org.kevoree.modeling.sample.kevoree.kt</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
