--- a/org.kevoree.modeling.kotlin.generator.mavenplugin/pom.xml
+++ b/org.kevoree.modeling.kotlin.generator.mavenplugin/pom.xml
@@ -14,6 +14,13 @@
     </parent>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
         <dependency>
             <groupId>org.kevoree.modeling</groupId>
             <artifactId>org.kevoree.modeling.kotlin.generator</artifactId>
