--- a/org.kevoree.modeling.microframework/pom.xml
+++ b/org.kevoree.modeling.microframework/pom.xml
@@ -25,13 +25,22 @@
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <version>${kotlin.version}</version>
-                <configuration />
+                <configuration>
+                    <librarySourceDir>${basedir}/src/main/java</librarySourceDir>
+                </configuration>
                 <executions>
                     <execution>
                         <id>compile</id>
                         <phase>process-sources</phase>
                         <goals>
                             <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>jsrc</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>jslib</goal>
                         </goals>
                     </execution>
                 </executions>
