cleanup scala deps from framework

--- a/org.kevoree.modeling.kotlin.generator.mavenplugin/pom.xml
+++ b/org.kevoree.modeling.kotlin.generator.mavenplugin/pom.xml
@@ -41,6 +41,18 @@
             <artifactId>sisu-guava</artifactId>
             <version>0.9.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-compiler</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+
     </dependencies>
 
 
