--- a/metamodel/fsm/org.kevoree.modeling.sample.fsm.kt/pom.xml
+++ b/metamodel/fsm/org.kevoree.modeling.sample.fsm.kt/pom.xml
@@ -21,9 +21,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib</artifactId>
-            <version>${kotlin.version}</version>
+            <groupId>org.kevoree.modeling</groupId>
+            <artifactId>org.kevoree.modeling.microframework</artifactId>
+            <version>${kmf.version}</version>
         </dependency>
     </dependencies>
 
@@ -44,6 +44,7 @@
                             <ecore>${metamodel.ecore}</ecore>
                             <packagePrefix>org</packagePrefix>
                             <clearOutput>false</clearOutput>
+                           <js>true</js>
                         </configuration>
                     </execution>
                 </executions>
