fix auto generation for operation (TODO copy annotation in case of not framework dependency)

--- a/metamodel/fsm/org.kevoree.modeling.sample.fsm.kt/pom.xml
+++ b/metamodel/fsm/org.kevoree.modeling.sample.fsm.kt/pom.xml
@@ -44,7 +44,7 @@
                             <ecore>${metamodel.ecore}</ecore>
                             <packagePrefix>org</packagePrefix>
                             <clearOutput>false</clearOutput>
-                           <js>true</js>
+                        <!--   <js>true</js>    -->
                         </configuration>
                     </execution>
                 </executions>
