--- a/metamodel/kermeta/org.kevoree.modeling.sample.kermeta.kt/pom.xml
+++ b/metamodel/kermeta/org.kevoree.modeling.sample.kermeta.kt/pom.xml
@@ -44,6 +44,9 @@
                             <ecore>${metamodel.ecore}</ecore>
                             <packagePrefix>kmf</packagePrefix>
                             <clearOutput>false</clearOutput>
+							
+							<modelOnly>true</modelOnly>
+							
                         </configuration>
                     </execution>
                 </executions>
