--- a/metamodel/pom.xml
+++ b/metamodel/pom.xml
@@ -44,6 +44,8 @@
 		<module>kermeta/org.kevoree.modeling.sample.kermeta.emf</module>
 		<module>kermeta/org.kevoree.modeling.sample.kermeta.js</module>
 		
+		<module>ecore/org.kevoree.modeling.sample.ecore.kt</module>
+		
 	</modules>
 
     <repositories>
