--- a/metamodel/pom.xml
+++ b/metamodel/pom.xml
@@ -45,6 +45,8 @@
 		<module>kermeta/org.kevoree.modeling.sample.kermeta.js</module>
 		
 		<module>ecore/org.kevoree.modeling.sample.ecore.kt</module>
+		<module>ecore/org.kevoree.modeling.sample.ecore.js</module>
+		
 		
 	</modules>
 
