--- a/metamodel/ecore/org.kevoree.modeling.sample.ecore.js/pom.xml
+++ b/metamodel/ecore/org.kevoree.modeling.sample.ecore.js/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.kevoree.modeling</groupId>
+            <artifactId>org.kevoree.modeling.microframework</artifactId>
+            <version>${kmf.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
