Enabling XMI loader and Serializer in JS. Some cleaning also

--- a/metamodel/cloud/pom.xml
+++ b/metamodel/cloud/pom.xml
@@ -52,7 +52,7 @@
                             <packagePrefix>org</packagePrefix>
                             <clearOutput>false</clearOutput>
                             <js>true</js>
-                            <ecma5>false</ecma5>
+                            <ecma5>true</ecma5>
 							<events>true</events>
                         </configuration>
                     </execution>
