add new file in cmake

--- a/org.kevoree.modeling.cpp.microframework/src/main/cpp/CMakeLists.txt
+++ b/org.kevoree.modeling.cpp.microframework/src/main/cpp/CMakeLists.txt
@@ -25,7 +25,8 @@ add_executable(
     org/kevoree/modeling/api/events/ModelTreeListener.cpp
     
     
-
+    org/kevoree/modeling/api/utils/Entry.cpp
+    org/kevoree/modeling/api/utils/Hashmap.cpp
 
    
     org/kevoree/modeling/api/trace/TraceSequence.cpp
