initiate persistence factory add fix

--- a/metamodel/cloud/pom.xml
+++ b/metamodel/cloud/pom.xml
@@ -44,7 +44,8 @@
                         <configuration>
                             <ecore>${metamodel.ecore}</ecore>
                             <packagePrefix>org</packagePrefix>
-                            <js>true</js>
+                            <!--<js>true</js>-->
+                            <persistence>true</persistence>
 							<events>true</events>
                         </configuration>
                     </execution>
