add test for Jed :-)

--- a/metamodel/tinycloud/cloud.js/nodejs/package.json
+++ b/metamodel/tinycloud/cloud.js/nodejs/package.json
@@ -4,6 +4,8 @@
   "author": "Fouquet Francois <fouquet.f@gmail.com>",
   "main": "./main.js",
   "dependencies": {
-    "nedb": "~0.8.12"
+    "nedb": "~0.8.12",
+	"levelup": "*",
+	"leveldown": "*"
   }
 }
