--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
         <module>org.kevoree.modeling.microframework</module>
         <module>org.kevoree.modeling.kotlin.generator</module>
         <module>org.kevoree.modeling.kotlin.generator.mavenplugin</module>
+        <module>org.kevoree.modeling.microframework.datastores</module>
     </modules>
 
     <dependencies>
